--- a/src/main/resources/templates/add-asana.html
+++ b/src/main/resources/templates/add-asana.html
@@ -11,11 +11,12 @@
 <main class="container">
 
     <h1>Добавить Асану</h1>
-    <form method="post" th:action="@{/add/asana}">
+    <form method="post" th:action="@{/asana/add}">
         <input type="text" name="title" placeholder="Введите название Ассаны">
         <input type="text" name="image" placeholder="Введите URL Фото">
         <textarea name="info" placeholder="Введите описание"></textarea>
-        <textarea name="fullInfo" placeholder="Введите полное описание"></textarea>
+        <textarea name="fullInfo" placeholder="Введите полное описание"></textarea><br>
+        <div class="error" th:text="${error}"></div>
         <button type="submit">Добавить</button>
     </form>
 
