--- a/src/main/resources/templates/asana-update.html
+++ b/src/main/resources/templates/asana-update.html
@@ -15,13 +15,13 @@
         <input type="text" name="title" th:value="${asana.title}" placeholder="Введите название Ассаны">
         <input type="text" name="image" th:value="${asana.image}" placeholder="Введите URL Фото">
         <textarea name="info" placeholder="Введите описание" th:text="${asana.info}"></textarea>
-        <textarea name="fullInfo" placeholder="Введите полное описание" th:text="${asana.fullInfo}"></textarea>
+        <textarea name="fullInfo" placeholder="Введите полное описание" th:text="${asana.fullInfo}"></textarea><br>
+        <div class="error" th:text="${error}"></div>
         <button type="submit">Редактировать</button>
     </form>
 
 </main>
 <div th:replace="layouts/footer :: footer"></div>
-
 
 </body>
 </html>
