--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -13,8 +13,8 @@
     <form method="post" th:action="@{/reg}">
         <input type="text" name="username" placeholder="Введите логин">
         <input type="email" name="email" placeholder="Введите email">
-        <input type="password" name="password" placeholder="Введите пароль">
-        <div th:text="${error}" style="color: red"></div>
+        <input type="password" name="password" placeholder="Введите пароль"><br>
+        <div class="error" th:text="${error}"></div>
         <button type="submit">Зарегистрироваться</button>
     </form>
 
