--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -16,16 +16,17 @@
     <br>
     <h2>Изменить данные</h2>
     <p>Привет, <span sec:authentication="name" /></p>
-    <form th:action="@{user/update}" method="post">
+    <form method="post" th:action="@{/user/update}">
         <input type="email" name="email" th:value="${email}" placeholder="Введите email">
         <input type="password" name="password"  placeholder="Введите password"><br>
-        <br><br>
+        <div class="error" th:text="${error}"></div>
+        <br>
         <select name="roles">
             <option value="USER">Пользователь</option>
             <option value="ADMIN">Администратор</option>
             <option value="REDACTOR">Редактор</option>
         </select>
-        <br><br>
+        <br>
         <button type="submit">Обновить данные</button>
     </form>
     <form method="post" th:action="@{/logout}">
