--- a/src/main/resources/templates/show-asana.html
+++ b/src/main/resources/templates/show-asana.html
@@ -9,7 +9,7 @@
 <body>
 <div th:replace="layouts/header :: header"></div>
 <main class="container">
-  <div class="asanas">
+  <div class="asana">
     <div>
       <img th:src="${asana.image}" th:alt="${asana.title}"/><br>
       <h3 th:text="${asana.title}" /><br>
