--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -15,6 +15,7 @@
         <span sec:authorize="isAuthenticated()">
             <a href="/user">Кабинет Пользователя</a>
             <a href="/asana/add">Добавить Ассану</a>
+            <a href="/cart-asanas/">Мои асаны</a>
          </span>
 
         <span sec:authorize="hasAuthority('ADMIN')">  
