--- a/src/main/resources/templates/cart-asanas.html
+++ b/src/main/resources/templates/cart-asanas.html
@@ -11,14 +11,16 @@
 
 
 <main class="container">
-  <div class="asanas">
-  <div th:each="el : ${asanas}" th:if="${!asanas.isEmpty()}">
-    <img th:src="${el.asanas.image}" th:alt="${el.asanas.title}"></a>
-    <h3 th:text="${el.asanas.title}" />
+
+  <div class="asana">
+  <div th:each="el : ${user_asanas}" th:if="${!user_asanas.isEmpty()}">
+    <img th:src="${el.asana.image}" th:alt="${el.asana.title}"></a>
+    <h3 th:text="${el.asana.title}" />
   </div>
   </div>
-
-
+  <div th:if="${user_asanas.isEmpty()}" class="block">
+    <h4>У вас пока еще нет асан</h4>
+  </div>
 </main>
 <div th:replace="layouts/footer :: footer"></div>
 
