--- a/src/main/resources/templates/user-asanas.html
+++ b/src/main/resources/templates/user-asanas.html
@@ -11,15 +11,14 @@
 
 
 <main class="container">
-<div class="asana" th:if="${!asanas.isEmpty()}">
-  <div th:each="el : ${asanas}">
-    <img th:src="${el.image}" th:alt="${el.title}"/><br>
-    <h3 th:text="${el.title}"></h3><br>
+  <div class="asana">
+    <div th:each="el : ${user_asanas}" th:if="${!user_asanas.isEmpty()}">
+      <img th:src="${el.asana.image}" th:alt="${el.asana.title}"></a>
+      <h3 th:text="${el.asana.title}" />
     </div>
   </div>
-  </div>
-  <div th:if="${asanas.isEmpty()}" class="block">
-    <p>No asanas</p>
+  <div th:if="${user_asanas.isEmpty()}" class="block">
+    <h4>Еще нет Асан</h4>
   </div>
 
 
