--- a/src/main/resources/templates/cart-asanas.html
+++ b/src/main/resources/templates/cart-asanas.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Последовательность Асан</title>
@@ -14,13 +13,22 @@
 
   <div class="asana">
   <div th:each="el : ${user_asanas}" th:if="${!user_asanas.isEmpty()}">
-    <img th:src="${el.asana.image}" th:alt="${el.asana.title}"></a>
+    <img th:src="${el.asana.image}" th:alt="${el.asana.title}"/>
     <h3 th:text="${el.asana.title}" />
+
+    <form method="post" th:action="@{'/cart-asanas/' + ${el.id} + '/delete'}">
+      <button type="submit">
+        <a>
+          <img src="https://cdn4.iconfinder.com/data/icons/multimedia-75/512/multimedia-39-512.png">
+        </a>
+      </button>
+    </form>
+
   </div>
   </div>
-  <div th:if="${user_asanas.isEmpty()}" class="block">
-    <h4>У вас пока еще нет асан</h4>
-  </div>
+    <div th:if="${user_asanas.isEmpty()}" class="block">
+     <h4>У вас пока еще нет асан</h4>
+   </div>
 </main>
 <div th:replace="layouts/footer :: footer"></div>
 
