--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
 
 <main class="container">
 
-  <h1>Ошибка 404</h1>
+  <h1>Что-то пошло не так!! :(</h1>
   <p>Вернитесь на главную страницу</p>
   <a href="/">главная</a>
 
