--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,11 @@
 <main class="container">
 
     <h1>Авторизация</h1>
+
     <form method="post" th:action="@{/login}">
         <input type="text" name="username" placeholder="Введите логин">
-        <input type="password" name="password" placeholder="Введите пароль">
+        <input type="password" name="password" placeholder="Введите пароль"><br>
+        <div class="error" th:text="${error}"></div>
         <button type="submit">Войти</button>
     </form>
 
