--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,7 +1,13 @@
-<header class="container" xmlns:th="http://www.thymeleaf.org"
+<header class="header" xmlns:th="http://www.thymeleaf.org"
         xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
         th:fragment="header">
-    <span class="logo">Building-asanas</span>
+
+    <span class="logo">
+        <a href="/">
+            <img src="https://cdn1.iconfinder.com/data/icons/cat-yoga-pose-and-asana-meditation-zen-namaste/100/pose11-512.png" alt="">
+        </a>
+    </span>
+
     <nav>
         <a href="/">Главная страница</a>
         <a href="/about-us">О Нас</a>
