--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
-    <link rel="stylesheet" th:href="@{/main.css}">
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
+
 </head>
 <body>
 <div th:replace="layouts/header :: header"></div>
@@ -11,12 +12,12 @@
 <main class="container">
     <h1>Регистрация</h1>
 
-    <form method="post" th:action="@{/reg}">
+    <form class="form" method="post" th:action="@{/reg}">
         <input type="text" name="username" placeholder="Введите логин">
         <input type="email" name="email" placeholder="Введите email">
         <input type="password" name="password" placeholder="Введите пароль"><br>
         <div class="error" th:text="${error}"></div>
-        <button type="submit">Зарегистрироваться</button>
+        <button class="button" type="submit">Зарегистрироваться</button>
     </form>
 
 </main>
