--- a/src/main/resources/templates/user-asanas.html
+++ b/src/main/resources/templates/user-asanas.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title th:text="${title}"/>
-  <link rel="stylesheet" th:href="@{/main.css}">
+  <link rel="stylesheet" th:href="@{/styles/main.css}">
+
 </head>
 <body>
 <div th:replace="layouts/header :: header"></div>
