--- a/src/main/resources/templates/asana-update.html
+++ b/src/main/resources/templates/asana-update.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Редактировать Асану</title>
-    <link rel="stylesheet" th:href="@{/main.css}">
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
+
 </head>
 <body>
 <div th:replace="layouts/header :: header"></div>
@@ -11,13 +12,13 @@
 <main class="container">
 
     <h1>Редактировать Асану</h1>
-    <form method="post" th:action="@{'/asana/' + ${asana.id} + '/update'}">
+    <form class="form" method="post" th:action="@{'/asana/' + ${asana.id} + '/update'}">
         <input type="text" name="title" th:value="${asana.title}" placeholder="Введите название Ассаны">
         <input type="text" name="image" th:value="${asana.image}" placeholder="Введите URL Фото">
         <textarea name="info" placeholder="Введите описание" th:text="${asana.info}"></textarea>
         <textarea name="fullInfo" placeholder="Введите полное описание" th:text="${asana.fullInfo}"></textarea><br>
         <div class="error" th:text="${error}"></div>
-        <button type="submit">Редактировать</button>
+        <button class="button" type="submit">Редактировать</button>
     </form>
 
 </main>
