--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,30 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная</title>
-    <link rel="stylesheet" th:href="@{/main.css}">
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
 </head>
 <body>
     <div th:replace="layouts/header :: header"></div>
     <div class="presentation">
         <img src="https://cdn1.iconfinder.com/data/icons/dompicon-glyph-fitness-diet/256/meditation-yoga-retreat-fitness-diet-512.png">
-        <h2>Yoga</h2>
-        <p>Here very cool!!!</p>
+        <h2>Составь свою последовательность</h2>
+        <p>Составь свою последовательность</p>
     </div>
 <main class="container">
-    <div >
 
-    </div>
     <div class="asana">
         <div th:each="el : ${asana}" th:if="${!asana.isEmpty()}">
-            <a th:href="'/asana/' + ${el.id}"><img th:src="${el.image}" th:alt="${el.title}"></a>
-            <h3 th:text="${el.title}" />
-            <p th:text="${el.info}" />
+            <a th:href="'/asana/' + ${el.id}">
+                <img th:src="${el.image}" th:alt="${el.title}">
+            </a>
+            <h3 th:text="${el.title}"></h3>
+            <p th:text="${el.info}"></p>
 
           <form method="post" th:action="@{'/cart-asanas/' + ${el.id} + '/add'}">
-                <button type="submit">Добавить</button>
+              <button class="icon" type="submit">
+                  <img th:src="@{/icon/adding.png}">
+              </button>
             </form>
         </div>
     </div>
+
     <div th:if="${asana.isEmpty()}" class="block">
         <p>Нет Асан!!!</p>
     </div>
