--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Авторизация</title>
-    <link rel="stylesheet" th:href="@{/main.css}">
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
+
 </head>
 <body>
 <div th:replace="layouts/header :: header"></div>
 
 <main class="container">
-
     <h1>Авторизация</h1>
-
-    <form method="post" th:action="@{/login}">
+    <form class="form" method="post" th:action="@{/login}">
         <input type="text" name="username" placeholder="Введите логин">
         <input type="password" name="password" placeholder="Введите пароль"><br>
         <div class="error" th:text="${error}"></div>
-        <button type="submit">Войти</button>
+        <button class="button" type="submit">Войти</button>
     </form>
 
 </main>
