--- a/src/main/resources/templates/user-comment.html
+++ b/src/main/resources/templates/user-comment.html
@@ -11,15 +11,12 @@
 
 
 <main class="container">
-  <div class="cartAsana">
-    <div th:each="el : ${user_asanas}" th:if="${!user_asanas.isEmpty()}">
-      <img th:src="${el.asana.image}" th:alt="${el.asana.title}"></a>
-      <h3 th:text="${el.asana.title}"></h3>
-    </div>
-  </div>
-  <div th:if="${user_asanas.isEmpty()}" class="block">
-    <h4>Еще нет Асан</h4>
-  </div>
+
+  <form class="form" method="post" th:action="@{user-comment}">
+    <textarea type="text" name="comment" th:text="${user_comment}" placeholder="Введите комментарий"></textarea>
+    <div class="error" th:text="${error}"></div>
+    <button class="button" type="submit">Обновить данные</button>
+  </form>
 
 
 </main>
